<resources>
    <string name="app_name">Proyecto_2</string>
    <string name="punto">.</string>
    <string name="_3">3</string>
    <string name="x">x</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="dividir">/</string>
    <string name="_0">0</string>
    <string name="_8">8</string>
    <string name="del">DEL</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="resta">-</string>
    <string name="mas">+</string>
    <string name="igual">=</string>
    <string name="_4">4</string>
    <string name="porcentaje">%</string>
    <string name="_1">1</string>
    <string name="_7">7</string>
    <string name="ac">AC</string>
</resources>
