<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bascket.ejercicio.com.proyecto_2.MainActivity">

    <EditText
        android:id="@+id/etProceso"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="bottom|right"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="@android:color/black"
        android:textSize="28sp" android:inputType="" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_below="@+id/etProceso"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:layout_weight="1"
                android:text="@string/ac"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btnSiete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:background="@drawable/buttonborder"
                android:text="@string/_7"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btnCuatro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/_4"
                android:textSize="28sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnUno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/_1"
                android:textSize="28sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnPorciento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/porcentaje"
                android:textSize="28sp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnDel"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/del"
                android:textSize="28sp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnOcho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/_8"
                android:textSize="28sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnCinco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/_5"
                android:textSize="28sp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnDos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/_2"
                android:textSize="28sp"
                android:layout_weight="1" />


            <Button
                android:id="@+id/btnCero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/_0"
                android:textSize="28sp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/dividir"
                android:textSize="28sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnNueve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/_9"
                android:textSize="28sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnSeis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/_6"
                android:textSize="28sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/_3"
                android:textSize="28sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnPunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/punto"
                android:textSize="28sp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnMulti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/x"
                android:textSize="28sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnResta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/resta"
                android:textSize="28sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnSuma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonborder"
                android:text="@string/mas"
                android:textSize="28sp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.1"
                android:background="@drawable/buttonborderequal"
                android:text="@string/igual"
                android:textColor="@android:color/white"
                android:textSize="28sp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
